# visual_odometry

./: CMakeLists.txt  README.md  calib.yml  camera.cpp  camera.h  helpers.h  main.cpp  odometer.cpp  odometer.h  sift.py
.github/workflows/: ccpp.yml
output_images/: camera_calib.txt
scripts/: calibration.py  visualize.py
src/: camera.cpp
